# csim-launcher

./: csim-launcher.cabal  stack.yaml
app/: ApplyStartSpec.hs  CheckSysDef.hs  DryRunBackend.hs  Main.hs
examples/: startspec.json  startspecServA.json  systemdef.json
src/CSIM/: Launcher.hs
src/CSIM/Launcher/: Backend.hs  Component.hs  Range.hs  StartSpecification.hs  SystemDefinition.hs
test-client/: Main.hs
