name:                csim-launcher
version:             0.1.0.0
synopsis:            Reference implementation of CSIM launcher
description:         Please see README.md
homepage:            https://github.com/githubuser/csim-launcher#readme
license:             BSD3
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          patrik.sandahl@ericsson.com
copyright:           2016 Ericsson
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CSIM.Launcher
  other-modules:       CSIM.Launcher.Backend
                       CSIM.Launcher.Component
                       CSIM.Launcher.Range
                       CSIM.Launcher.StartSpecification
                       CSIM.Launcher.SystemDefinition
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , attoparsec
                     , bytestring
                     , text
                     , unordered-containers
  default-language:    Haskell2010
  ghc-options:         -Wall

executable launcher
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       DryRunBackend
  ghc-options:         -Wall
  build-depends:       base
                     , aeson
                     , csim-launcher
                     , hats
                     , optparse-applicative
  default-language:    Haskell2010

executable launcher-client
  hs-source-dirs:      test-client
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , aeson
                     , csim-launcher
                     , hats
                     , optparse-applicative
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/csim-launcher
